litmask/tests/compile/mask_include_str_missing.stderr
error: mask!(include_str!("examples/fixtures/does_not_exist.txt")): No such file or directory (os error 2)
 --> tests/compile/mask_include_str_missing.rs:9:32
  |
9 |     let _ = mask!(include_str!("examples/fixtures/does_not_exist.txt"));
  |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
